--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "react-dom": "^0.14.8",
     "react-dropdown": "^1.2.1",
     "react-redux": "^5.0.3",
+    "react-redux-i18n": "^1.8.0",
     "react-router": "^2.0.1",
     "react-widgets": "^3.4.6",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.3"
+    "redux-saga": "^0.14.3",
+    "redux-thunk": "^2.2.0"
   }
 }
